namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
    name: jahg
    labels:
     tipo: desarrollo
