app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp1
spec:
  selector:
    app: webapp-sql
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: NodePort
