ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.agarcia.com 
  http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: webapp1
            port:
              number: 80
